style.css
body {
    font-family: main;
    font-weight:400;
    width: 700px;
    margin: auto;
    position: relative;
    padding: 0 20px;
    background: #f0f0f0 ;
    color: #100c08;
    font-size: 20px;
    line-height: 28px;
    margin-top: 35px;
    margin-bottom: 35px;

}

@font-face {
  font-family: main; /* set name */
  src: url(./assets/fonts/Lora-VariableFont_wght.ttf); /* url of the font */
}
small {
    font-size: 12px;
    color: #7a8280;
}
@font-face {
  font-family: Iosevka; /* set name */
  src: url(./assets/fonts/Iosevka-Regular.ttc); /* url of the font */
}

@font-face {
  font-family: Justus-bold; /* set name */
  src: url(./assets/fonts/Justus-Bold.ttf); /* url of the font */
}

@font-face {
  font-family: Justus-it; /* set name */
  src: url(./assets/fonts/Justus-Italic.ttf); /* url of the font */
}


.block{
    display: block;
    overflow-x: auto;
    white-space: pre;
    word-wrap: normal;
    padding-left: 1em;
}

code {
    font-family: 'Iosevka', monospace;
    background: #40826d1a;
}

img {
  max-width: 600px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.Thumbnails { display: flex;
  max-width: 100vw;
  width: 100vw;
  margin-left: calc(49% - 50vw + 1px);  /* +20px to account for body padding */
  margin-right: calc(49% - 50vw + 1px); /* +20px to account for body padding */
  flex-flow: row wrap;
  justify-content: center;
  gap: var(--spacing-s);
}

.Thumbnails-thumbImg {
  width: 99%;
  height: 99%;
  object-fit: contain;
}

.Thumbnails-thumb {
  --max-height: Min(50vh, 480px);
  --min-height: 500px;
  --aspect-ratio: calc(var(--image-width) / var(--image-height));

  display: flex;
  min-width:  Min(100%, calc(var(--min-height) * var(--aspect-ratio)));
  max-width: Min(100%, calc(var(--max-height) * var(--aspect-ratio)));
  flex: var(--aspect-ratio);
  aspect-ratio: var(--aspect-ratio);

  @media (max-width: 480px) {
    --Thumbnails-max-height: Min(90vh, 480px);

    flex: 1 0 100%;
  }

}

.title{

    font-size: 60px;
}

h1 {
    font-family: Justus-bold;
    margin-top: 50px;
    margin-bottom: 65px;
    line-height: 50px;
    font-size: 40px;
    color : #40826d;
    transition: all 0.2s;
}

.date {
    margin-top: -50px;
    color: #7a8280;
}

h1:hover {
    color : #bf7d92;
    transition: all 0.2s;
}

h2 {
    font-family: Justus-it;
    margin-top: 30px;
    margin-bottom: 10px;
    font-size: 24px;
    color : #bf7d92;
}


.desc {
    border-left : 2px solid #40826d;
    padding-left: 3px;
    margin-left: -3px;
    height:  auto;
    margin-bottom: 35px;
    transition: all 0.2;
}

.desc:hover {
    border-left : 3px solid #bf7d92;
    padding-left: 3px;
    margin-left: -4px;
    height:  auto;
    margin-bottom: 35px;
    transition: all 0.2;
}

p {

    margin-bottom: 15px;
    text-align: justify;
}

a:link{
    color: #100c08;
    text-decoration: underline; 
    text-decoration-thickness: 2px;
    text-decoration-color: #40826d;
    transition: text-decoration-color 0.2s;
    text-underline-offset: 2px;
}

a:visited{
    color: #100c08;
    text-decoration: underline; 
    text-decoration-thickness: 2px;
    text-decoration-color: #40826d;
    transition: text-decoration-color 0.2s;
    text-underline-offset: 2px;
}
a:hover{
    color: #100c08;
    text-decoration: underline; 
    text-decoration-thickness: 3px;
    text-decoration-color: #bf7d92;
    transition: text-decoration-color 0.2s;
    text-underline-offset: 3px;
}

.back-container {
    position: absolute;
    width: 100px; /* Fixed width to prevent flickering */
    height: 60px; /* Fixed height to prevent flickering */
    left: -100px;
    display: block;
}
.back {
    border: none;
    position: absolute;
    filter: invert(41%) sepia(52%) saturate(337%) hue-rotate(110deg) brightness(97%) contrast(92%);
    width: 90px;
    height: 50px;
    left: -100px;
    transition: all 0.1s;
}

.back:hover {
    border: none;
    position: absolute;
    width: 90px;
    height: 60px;
    left: -90px;
    right: -10px;
    transition: all 0.2s;
}

.avatar {
    border: none;
    position: absolute;
    background: #73c936;
    width: 110px;
    height: 120px;
    left: -100px;
    top: -15px;
    border-radius: 50%;
}

@media (max-width: 480px){
    .avatar {
	display: none;
    }
}

